--- a/src/main/resources/templates/customer/HoaDon/ChiTietHoaDon/CTDaoGiaoCustomer.html
+++ b/src/main/resources/templates/customer/HoaDon/ChiTietHoaDon/CTDaoGiaoCustomer.html
@@ -3,7 +3,7 @@
       layout:decorate="~{customer/layouts/index}">
 <head>
     <meta charset="UTF-8">
-    <title>Chờ giao hàng</title>
+    <title>Đã giao hàng</title>
     <link rel="stylesheet" th:href="@{/customer/css/HoaDon/ChiTietCustomer/ChiTiet.css}">
 </head>
 <body>
@@ -74,6 +74,27 @@
                         <p class="h6 mt-3 mb-1"><span
                                 th:text="${#dates.format(TLChoGiaoHang.ngayTao, 'dd/MM/yyyy')}"></span></p>
                         <p class="h6 text-muted mb-0 mb-lg-0">Chờ giao hàng</p>
+                    </div>
+                </div>
+
+                <div class="timeline-step" th:each="TLDangGiaoHang: ${timeLineDangGiaoHang}">
+                    <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top"
+                         title="" data-content="And here's some amazing content. It's very engaging. Right?"
+                         data-original-title="2003">
+                        <div class="inner-circle"></div>
+                        <p class="h6 mt-3 mb-1"><span
+                                th:text="${#dates.format(TLDangGiaoHang.ngayTao, 'dd/MM/yyyy')}"></span></p>
+                        <p class="h6 text-muted mb-0 mb-lg-0">Đang giao hàng</p>
+                    </div>
+                </div>
+
+                <div class="timeline-step" th:each="TLDaGiao: ${timeLineDaGiaoHang}">
+                    <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top"
+                         title="" data-content="And here's some amazing content. It's very engaging. Right?"
+                         data-original-title="2003">
+                        <div class="inner-circle"></div>
+                        <p class="h6 mt-3 mb-1"><span th:text="${#dates.format(TLDaGiao.ngayTao, 'dd/MM/yyyy')}"></span></p>
+                        <p class="h6 text-muted mb-0 mb-lg-0">Đã giao hàng</p>
                     </div>
                 </div>
             </div>
