--- a/src/main/resources/templates/customer/HoaDon/DanhSach/dangGiaoCustomer.html
+++ b/src/main/resources/templates/customer/HoaDon/DanhSach/dangGiaoCustomer.html
@@ -3,25 +3,50 @@
       layout:decorate="~{customer/layouts/index}">
 <head>
     <meta charset="UTF-8">
-    <title>Chờ xác nhận</title>
+    <title>Đang giao hàng</title>
     <link rel="stylesheet" th:href="@{/customer/css/HoaDon/ChiTietCustomer/danhSach.css}">
-    <script th:src="@{/customer/js/HoaDon/ChoXacNhanCustomer.js}"></script>
+    <script th:src="@{/customer/js/HoaDon/DangGiaoCustomer.js}"></script>
     <script th:src="@{/customer/js/HoaDon/jsChungHDCtomer.js}"></script>
 </head>
 <body>
 <section class="Customer_ChoGiaoHang" layout:fragment="content">
     <div class="tab-buttons">
-        <button class="tab-button active" onclick="redirectToChoxacNhanCustomer()">Chờ xác nhận</button>
+        <button class="tab-button" onclick="redirectToChoxacNhanCustomer()">Chờ xác nhận</button>
         <button class="tab-button" onclick="redirectToChoGiaoHangCustomer()">Chờ giao hàng</button>
-        <button class="tab-button" onclick="redirectToDangGiaoCustomer()">Đang giao</button>
+        <button class="tab-button active" onclick="redirectToDangGiaoCustomer()">Đang giao</button>
         <button class="tab-button" onclick="redirectToDaGiaoCustomer()">Đã giao</button>
         <button class="tab-button" onclick="redirectToDahuyCustomer()">Đã hủy</button>
     </div>
 
     <div class="container">
+        <div class="hduong1">
+            <button id="HoanThanhTatCa" class="daNhanTatCaCustomer">Đã nhận tất cả</button>
+            <div class="modal fade hoanThanhTatCaModal" tabindex="-1" aria-labelledby="hoanThanhTatCaModalLabel"
+                 aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="hoanThanhTatCaModalLabel">Xác nhận đơn</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Xác nhận đã nhận tất cả đơn hàng?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary btn-dong-y">Đồng ý</button>
+                            <button type="button" class="btn btn-secondary btn-khong"
+                                    data-bs-dismiss="modal">Không
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-md-12">
-                <table class="table">
+                <table class="table" id="user-table-DangGiaoCustomer">
                     <thead>
                     <tr>
                         <th scope="col">STT</th>
@@ -34,38 +59,39 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="customerXN, stt: ${choXacNhanCustomer}">
+                    <tr th:each="customerDG, stt: ${dangtGiaoCustomer}">
                         <th scope="row" th:text="${stt.count}"></th>
-                        <td th:text="${customerXN.maDon}"></td>
-                        <td th:text="${customerXN.nguoiNhan}"></td>
-                        <td th:text="${customerXN.sdtNguoiNhan}"></td>
-                        <td th:text="${customerXN.tongTienHoaDon}"></td>
-                        <td th:text="${customerXN.trangThai.name}"></td>
+                        <td th:text="${customerDG.maDon}"></td>
+                        <td th:text="${customerDG.nguoiNhan}"></td>
+                        <td th:text="${customerDG.sdtNguoiNhan}"></td>
+                        <td th:text="${customerDG.tongTienHoaDon}"></td>
+                        <td th:text="${customerDG.trangThai.name}"></td>
                         <td>
                             <div class="btn-group">
                                 <div class="btn-group">
-                                    <a th:href="@{'/customer/DonHang/ChiTietHoaDon/ChoXacNhan/hoa-don-id=' + ${customerXN.id}}"
+                                    <a th:href="@{'customer/DonHang/ChiTietHoaDon/DaGiaoHang/hoa-don-id=' + ${customerDG.id}}"
                                        class="btn btn-warning btn-sm"
                                        type="submit">
                                         <i class="fa fa-id-card-o" aria-hidden="true"></i>
                                     </a>
                                 </div>
 
-                                <button class="action-button HuyDonCus" th:attr="data-id=${customerXN.id}">
-                                    <i class="fas fa-times"></i>
+                                <button class="action-button DaGiaoCus" th:attr="data-id=${customerDG.id}">
+                                    <i class="fas fa-check"></i>
                                 </button>
                                 <br>
-                                <div class="modal fade huyModal" tabindex="-1" aria-labelledby="huyDonModalLabel"
+                                <div class="modal fade giaoHangTCModal" tabindex="-1"
+                                     aria-labelledby="giaoHangTCModalLabel"
                                      aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="huyDonModalLabel">Hủy đơn hàng</h5>
+                                                <h5 class="modal-title" id="giaoHangTCModalLabel">Xác nhận đơn</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
-                                                Hủy đơn hàng?
+                                                Xác nhận đã nhận đơn?
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-primary btn-dong-y">Đồng ý</button>
