--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/banHang.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/banHang.html
@@ -3,8 +3,8 @@
       layout:decorate="~{admin/layouts/index}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
     <title>Bán hàng tại quầy</title>
+    <link rel="icon" href="path_to_favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/admin/css/banHang/banHangTaiQuay.css}">
     <link rel="stylesheet" th:href="@{/admin/css/banHang/test.css}">
     <script th:src="@{/admin/js/banHang/banHangTaiQuay/banHang.js}"></script>
