--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoGiaoHang.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoGiaoHang.html
@@ -64,7 +64,7 @@
     <table id="user-table-ChoLayHang" class="table">
         <thead>
         <tr>
-            <th data-field="state" data-checkbox="true"></th>
+            <th>STT</th>
             <th scope="col">Mã đơn</th>
             <th scope="col">Họ tên</th>
             <th scope="col">Số điện thoại</th>
@@ -75,13 +75,14 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="hoaDon : ${ChoGiaoHang}">
-            <td></td>
+        <tr th:each="hoaDon, stt : ${ChoGiaoHang}">
+            <td th:text="${stt.count}"></td>
             <th scope="row" th:text="${hoaDon.maDon}"></th>
             <td th:text="${hoaDon.khachHang.hoTen}"></td>
             <td th:text="${hoaDon.sdtNguoiNhan}"></td>
             <td th:text="${#dates.format(hoaDon.ngayTao, 'dd/MM/yyyy')}"></td>
-            <td th:text="${hoaDon.tongTienHoaDon}"></td>
+<!--            <td th:text="${hoaDon.tongTienHoaDon}"></td>-->
+            <td th:text="${#numbers.formatDecimal(hoaDon.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
             <td th:text="${hoaDon.ghiChu}"></td>
             <td>
                 <!--UPDATE TRẠNG THÁI HÓA ĐƠN-->
@@ -125,16 +126,17 @@
         </tr>
         </tbody>
     </table>
-    <div>
-        <ul class="pagination" th:classappend="${pageChoGiaoHang > 0} ? '' : 'pagination-empty'">
+    <div th:if="${!#lists.isEmpty(ChoGiaoHang)}">
+        <ul class="pagination">
             <li th:each="pageNumber : ${#numbers.sequence(1, pageChoGiaoHang)}">
                 <a th:href="@{/admin/DonHang/ChoGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
             </li>
         </ul>
     </div>
-    <div class="alert alert-warning container mt-3 text-center" th:if="${#lists.isEmpty(ChoGiaoHang)}"
+    <div class="alert alert-warning container mt-3 text-center" th:unless="${!#lists.isEmpty(ChoGiaoHang)}"
          style="background-color: transparent; border: none;">
-        <span style="font-size: 1.2em;">Không có dữ liệu</span>
+        <img src="/admin/img/noData2.png" alt="Không có sản phẩm" style="width: 300px; height: 300px;">
+        <p class="empty-message" style="margin-top: 20px; font-size: 1.8em;">KHÔNG CÓ DỮ LIỆU</p>
     </div>
 </div>
 
