--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
@@ -85,7 +85,7 @@
     <table id="user-table-ChoXacNhan" class="table">
         <thead>
         <tr>
-            <th data-field="state" data-checkbox="true"></th>
+            <th>STT</th>
             <th scope="col">Mã đơn</th>
             <th scope="col">Họ tên</th>
             <th scope="col">Số điện thoại</th>
@@ -96,13 +96,14 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="hoaDon : ${choXacNhan}">
-            <td></td>
+        <tr th:each="hoaDon, stt : ${choXacNhan}">
+            <td th:text="${stt.count}"></td>
             <th scope="row" th:text="${hoaDon.maDon}"></th>
             <td th:text="${hoaDon.khachHang.hoTen}"></td>
             <td th:text="${hoaDon.sdtNguoiNhan}"></td>
             <td th:text="${#dates.format(hoaDon.ngayTao, 'dd/MM/yyyy')}"></td>
-            <td th:text="${hoaDon.tongTienHoaDon}"></td>
+<!--            <td th:text="${hoaDon.tongTienHoaDon}"></td>-->
+            <td th:text="${#numbers.formatDecimal(hoaDon.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
             <td th:text="${hoaDon.ghiChu}"></td>
             <td>
                 <div class="button-group">
@@ -171,7 +172,7 @@
         </tr>
         </tbody>
     </table>
-    <div>
+    <div th:if="${!#lists.isEmpty(choXacNhan)}">
         <ul class="pagination" th:classappend="${pageChoXacNhan > 0} ? '' : 'pagination-empty'">
             <li th:each="pageNumber : ${#numbers.sequence(1, pageChoXacNhan)}">
                 <a th:href="@{/admin/DonHang/ChoXacNhanDonHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
@@ -180,9 +181,9 @@
     </div>
     <div class="alert alert-warning container mt-3 text-center" th:if="${#lists.isEmpty(choXacNhan)}"
          style="background-color: transparent; border: none;">
-        <span style="font-size: 1.2em;">Không có dữ liệu</span>
+        <img src="/admin/img/noData2.png" alt="Không có sản phẩm" style="width: 300px; height: 300px;">
+        <p class="empty-message" style="margin-top: 20px; font-size: 1.8em;">KHÔNG CÓ DỮ LIỆU</p>
     </div>
-    <div class="thong-bao" style="display: none;"></div>
 </div>
 
 </body>
