--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaHuy.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaHuy.html
@@ -37,6 +37,7 @@
     <table id="user-table-DaHuy" class="table">
         <thead>
         <tr>
+            <th>STT</th>
             <th scope="col">Mã đơn</th>
             <th scope="col">Họ tên</th>
             <th scope="col">Số điện thoại</th>
@@ -47,12 +48,14 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="hoaDon : ${DaHuy}">
-            <th scope="row" th:text="${hoaDon.maDon}"></th>
+        <tr th:each="hoaDon, stt : ${DaHuy}">
+            <td th:text="${stt.count}"></td>
+            <td scope="row" th:text="${hoaDon.maDon}"></td>
             <td th:text="${hoaDon.khachHang.hoTen}"></td>
             <td th:text="${hoaDon.sdtNguoiNhan}"></td>
             <td th:text="${#dates.format(hoaDon.ngayTao, 'dd/MM/yyyy')}"></td>
-            <td th:text="${hoaDon.tongTienHoaDon}"></td>
+<!--            <td th:text="${hoaDon.tongTienHoaDon}"></td>-->
+            <td th:text="${#numbers.formatDecimal(hoaDon.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
             <td th:text="${hoaDon.ghiChu}"></td>
             <td>
                 <div class="button-group-a">
@@ -67,7 +70,7 @@
         </tr>
         </tbody>
     </table>
-    <div>
+    <div th:if="${!#lists.isEmpty(DaHuy)}">
         <ul class="pagination" th:classappend="${pageDaHuy > 0} ? '' : 'pagination-empty'">
             <li th:each="pageNumber : ${#numbers.sequence(1, pageDaHuy)}">
                 <a th:href="@{/admin/DonHang/DaHuyHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
@@ -76,7 +79,8 @@
     </div>
     <div class="alert alert-warning container mt-3 text-center" th:if="${#lists.isEmpty(DaHuy)}"
          style="background-color: transparent; border: none;">
-        <span style="font-size: 1.2em;">Không có dữ liệu</span>
+        <img src="/admin/img/noData2.png" alt="Không có sản phẩm" style="width: 300px; height: 300px;">
+        <p class="empty-message" style="margin-top: 20px; font-size: 1.8em;">KHÔNG CÓ DỮ LIỆU</p>
     </div>
 </div>
 
