--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DangGiao.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DangGiao.html
@@ -62,7 +62,7 @@
     <table id="user-table-DangGiao" class="table">
         <thead>
         <tr>
-            <th data-field="state" data-checkbox="true"></th>
+            <th>STT</th>
             <th scope="col">Mã đơn</th>
             <th scope="col">Họ tên</th>
             <th scope="col">Số điện thoại</th>
@@ -73,13 +73,14 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="hoaDon : ${dangtGiao}">
-            <td></td>
+        <tr th:each="hoaDon, stt : ${dangtGiao}">
+            <td th:text="${stt.count}"></td>
             <th scope="row" th:text="${hoaDon.maDon}"></th>
             <td th:text="${hoaDon.khachHang.hoTen}"></td>
             <td th:text="${hoaDon.sdtNguoiNhan}"></td>
             <td th:text="${#dates.format(hoaDon.ngayTao, 'dd/MM/yyyy')}"></td>
-            <td th:text="${hoaDon.tongTienHoaDon}"></td>
+<!--            <td th:text="${hoaDon.tongTienHoaDon}"></td>-->
+            <td th:text="${#numbers.formatDecimal(hoaDon.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
             <td th:text="${hoaDon.ghiChu}"></td>
             <td>
                 <div class="button-group">
@@ -123,7 +124,7 @@
         </tr>
         </tbody>
     </table>
-    <div>
+    <div th:if="${!#lists.isEmpty(dangtGiao)}">
         <ul class="pagination" th:classappend="${pageDangGiao > 0} ? '' : 'pagination-empty'">
             <li th:each="pageNumber : ${#numbers.sequence(1, pageDangGiao)}">
                 <a th:href="@{/admin/DonHang/DangGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
@@ -132,7 +133,8 @@
     </div>
     <div class="alert alert-warning container mt-3 text-center" th:if="${#lists.isEmpty(dangtGiao)}"
          style="background-color: transparent; border: none;">
-        <span style="font-size: 1.2em;">Không có dữ liệu</span>
+        <img src="/admin/img/noData2.png" alt="Không có sản phẩm" style="width: 300px; height: 300px;">
+        <p class="empty-message" style="margin-top: 20px; font-size: 1.8em;">KHÔNG CÓ DỮ LIỆU</p>
     </div>
 </div>
 
