--- a/src/main/resources/templates/customer/HoaDon/ChiTietHoaDon/CTChoXacNhanCustomer.html
+++ b/src/main/resources/templates/customer/HoaDon/ChiTietHoaDon/CTChoXacNhanCustomer.html
@@ -36,13 +36,16 @@
                 </td>
                 <td th:text="${hdct.donGia}"></td>
                 <td th:text="${hdct.soLuong}"></td>
-                <td th:text="${hdct.tongTien}"></td>
+<!--                <td th:text="${hdct.tongTien}"></td>-->
+                <td th:text="${#numbers.formatDecimal(hdct.tongTien, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
+
             </tr>
             </tbody>
         </table>
 
         <p>Tổng tiền:
-            <span th:text="${hoaDon.tongTienDonHang}"></span>
+<!--            <span th:text="${hoaDon.tongTienDonHang}"></span>-->
+            <td th:text="${#numbers.formatDecimal(hoaDon.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
         </p>
     </div>
 
