--- a/src/main/resources/templates/customer/HoaDon/DanhSach/choGiaoHangCustomer.html
+++ b/src/main/resources/templates/customer/HoaDon/DanhSach/choGiaoHangCustomer.html
@@ -37,7 +37,8 @@
                     <td th:text="${customerGH.maDon}"></td>
                     <td th:text="${customerGH.nguoiNhan}"></td>
                     <td th:text="${customerGH.sdtNguoiNhan}"></td>
-                    <td th:text="${customerGH.tongTienHoaDon}"></td>
+<!--                    <td th:text="${customerGH.tongTienHoaDon}"></td>-->
+                    <td th:text="${#numbers.formatDecimal(customerGH.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
                     <td th:text="${customerGH.trangThai.name}"></td>
                     <td>
                         <div class="btn-group">
