--- a/src/main/resources/templates/customer/HoaDon/DanhSach/choXacNhanCustomer.html
+++ b/src/main/resources/templates/customer/HoaDon/DanhSach/choXacNhanCustomer.html
@@ -39,7 +39,8 @@
                         <td th:text="${customerXN.maDon}"></td>
                         <td th:text="${customerXN.nguoiNhan}"></td>
                         <td th:text="${customerXN.sdtNguoiNhan}"></td>
-                        <td th:text="${customerXN.tongTienHoaDon}"></td>
+<!--                        <td th:text="${customerXN.tongTienHoaDon}"></td>-->
+                        <td th:text="${#numbers.formatDecimal(customerXN.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
                         <td th:text="${customerXN.trangThai.name}"></td>
                         <td>
                             <div class="btn-group">
