--- a/src/main/resources/templates/customer/HoaDon/DanhSach/daHuyCustomer.html
+++ b/src/main/resources/templates/customer/HoaDon/DanhSach/daHuyCustomer.html
@@ -38,7 +38,8 @@
                         <td th:text="${customerDH.maDon}"></td>s
                         <td th:text="${customerDH.nguoiNhan}"></td>
                         <td th:text="${customerDH.sdtNguoiNhan}"></td>
-                        <td th:text="${customerDH.tongTienHoaDon}"></td>
+<!--                        <td th:text="${customerDH.tongTienHoaDon}"></td>-->
+                        <td th:text="${#numbers.formatDecimal(customerDH.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
                         <td th:text="${customerDH.trangThai.name}"></td>
                         <td>
                             <div class="btn-group">
