--- a/src/main/resources/templates/customer/HoaDon/DanhSach/dangGiaoCustomer.html
+++ b/src/main/resources/templates/customer/HoaDon/DanhSach/dangGiaoCustomer.html
@@ -64,7 +64,8 @@
                         <td th:text="${customerDG.maDon}"></td>
                         <td th:text="${customerDG.nguoiNhan}"></td>
                         <td th:text="${customerDG.sdtNguoiNhan}"></td>
-                        <td th:text="${customerDG.tongTienHoaDon}"></td>
+<!--                        <td th:text="${customerDG.tongTienHoaDon}"></td>-->
+                        <td th:text="${#numbers.formatDecimal(customerDG.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
                         <td th:text="${customerDG.trangThai.name}"></td>
                         <td>
                             <div class="btn-group">
