--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/DanhSach.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/DanhSach.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{admin/layouts/index}">
+    layout:decorate="~{admin/layouts/index}">
 
 <head>
     <meta charset="UTF-8">
@@ -10,41 +10,41 @@
 </head>
 
 <body>
-<div class="container" layout:fragment="content">
-    <input type="text" class="timKiem" placeholder="Tìm kiếm đơn hàng..." aria-label="Search"
-           aria-describedby="basic-addon2">
-    <button type="submit" class="search-button">
-        <i class="fas fa-search"></i>
-    </button>
-
-    <form id="form-tao-moi" th:action="@{/TaoHoaDon}" method="post">
-        <button type="submit" class="create-invoice-button">
-            Tạo hóa đơn
+    <div class="container" layout:fragment="content">
+        <input type="text" class="timKiem" placeholder="Tìm kiếm đơn hàng..." aria-label="Search"
+            aria-describedby="basic-addon2">
+        <button type="submit" class="search-button">
+            <i class="fas fa-search"></i>
         </button>
-    </form>
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th>STT</th>
-            <th>Mã đơn</th>
-            <th>Số sản phẩm</th>
-            <th>Tổng số tiền</th>
-            <th>Ngày tạo</th>
-            <th>Trạng thái</th>
-            <th>Thao tác</th>
-        </tr>
-        </thead>
+        <form id="form-tao-moi" th:action="@{/TaoHoaDon}" method="post">
+            <button type="submit" class="create-invoice-button">
+                Tạo hóa đơn
+            </button>
+        </form>
 
-        <tbody>
-        <tr th:each="hoaDonTaiQuay, stt: ${danhSachBanHang}">
-            <td th:text="${stt.count}"></td>
-            <td th:text="${hoaDonTaiQuay.maDon}"></td>
-            <td th:text="${hoaDonTaiQuay.hoaDonChiTiets.size()}"></td>
-<!--            <td th:text="${hoaDonLoai1.tongTienHoaDon}"></td>-->
-            <td th:text="${#numbers.formatDecimal(hoaDonTaiQuay.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>STT</th>
+                    <th>Mã đơn</th>
+                    <th>Số sản phẩm</th>
+                    <th>Tổng số tiền</th>
+                    <th>Ngày tạo</th>
+                    <th>Trạng thái</th>
+                    <th>Thao tác</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr th:each="hoaDonTaiQuay, stt: ${danhSachBanHang}">
+                    <td th:text="${stt.count}"></td>
+                    <td th:text="${hoaDonTaiQuay.maDon}"></td>
+                    <td th:text="${hoaDonTaiQuay.hoaDonChiTiets.size()}"></td>
+                    <!--            <td th:text="${hoaDonLoai1.tongTienHoaDon}"></td>-->
+                    <td th:text="${#numbers.formatDecimal(hoaDonTaiQuay.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
             <td th:text="${#dates.format(hoaDonTaiQuay.ngayTao, 'dd/MM/yyyy')}"></td>
-            <td th:text="${hoaDonTaiQuay.trangThai.name}"></td>
+            <!-- <td th:text="${hoaDonTaiQuay.trangThai.name}"></td> -->
             <td>
                 <div class="btn-group">
                     <a th:href="@{'/banHang/' + ${hoaDonTaiQuay.id}}"
