--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DangGiao.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DangGiao.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div class="container" layout:fragment="content">
+<div class="container-fluid" layout:fragment="content">
     <div class="tab-buttons">
         <button class="tab-button" onclick="redirectToTatCaDon()">Tất cả đơn</button>
         <button class="tab-button" onclick="redirectToChoxacNhan()">Chờ xác nhận</button>
@@ -74,7 +74,7 @@
         </thead>
         <tbody>
         <tr th:each="hoaDon, stt : ${dangtGiao}">
-            <td th:text="${stt.count}"></td>
+            <td th:text="${(page - 1) * size + stt.count}"></td>
             <th scope="row" th:text="${hoaDon.maDon}"></th>
             <td th:text="${hoaDon.khachHang.hoTen}"></td>
             <td th:text="${hoaDon.sdtNguoiNhan}"></td>
@@ -125,9 +125,10 @@
         </tbody>
     </table>
     <div th:if="${!#lists.isEmpty(dangtGiao)}">
-        <ul class="pagination" th:classappend="${pageDangGiao > 0} ? '' : 'pagination-empty'">
+        <ul class="pagination">
             <li th:each="pageNumber : ${#numbers.sequence(1, pageDangGiao)}">
-                <a th:href="@{/admin/DonHang/DangGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
+                <a th:href="@{/admin/DonHang/DangGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"
+                   th:class="${pageNumber == page ? 'active-page' : ''}"></a>
             </li>
         </ul>
     </div>
