--- a/src/main/resources/templates/admin/layouts/index.html
+++ b/src/main/resources/templates/admin/layouts/index.html
@@ -110,7 +110,7 @@
                 <span th:replace="admin/fragments/header :: header"></span>
                 <!-- end header -->
                 <!-- dynamic content -->
-                <div class="container" layout:fragment="content"></div>
+                <div class="container-fluid" layout:fragment="content"></div>
                 <!-- dynamic content -->
             </div>
             <!-- footer start -->
