--- a/src/main/resources/static/admin/css/banHang/banHangTaiQuay.css
+++ b/src/main/resources/static/admin/css/banHang/banHangTaiQuay.css
@@ -126,3 +126,47 @@
     height: 700px;
 }
 
+.button-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-container div {
+    display: flex;
+}
+
+.search-button,
+.create-invoice-button {
+    margin-left: 10px;
+}
+.pagination {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination li {
+    margin: 0 5px;
+}
+
+.pagination a {
+    display: block;
+    padding: 8px 12px;
+    border: 1px solid #ddd;
+    background-color: #f5f5f5;
+    color: #333;
+    text-decoration: none;
+}
+
+.pagination a:hover {
+    background-color: #ddd;
+}
+
+.pagination .active-page {
+    font-weight: bold;
+    background-color: #333;
+    color: #fff;
+}
+
+
