--- a/src/main/resources/static/admin/css/hoaDon/TrangThaiHoaDon/choXacNhan.css
+++ b/src/main/resources/static/admin/css/hoaDon/TrangThaiHoaDon/choXacNhan.css
@@ -400,3 +400,32 @@ h1:before {
     left: 50%;
     transform: translateX(-50%);
 }
+.pagination {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination li {
+    margin: 0 5px;
+}
+
+.pagination a {
+    display: block;
+    padding: 8px 12px;
+    border: 1px solid #ddd;
+    background-color: #f5f5f5;
+    color: #333;
+    text-decoration: none;
+}
+
+.pagination a:hover {
+    background-color: #ddd;
+}
+
+.pagination .active-page {
+    font-weight: bold;
+    background-color: #333;
+    color: #fff;
+}
