--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/DanhSach.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/DanhSach.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorate="~{admin/layouts/index}">
+      layout:decorate="~{admin/layouts/index}">
 
 <head>
     <meta charset="UTF-8">
@@ -10,53 +10,68 @@
 </head>
 
 <body>
-    <div class="container" layout:fragment="content">
-        <input type="text" class="timKiem" placeholder="Tìm kiếm đơn hàng..." aria-label="Search"
-            aria-describedby="basic-addon2">
-        <button type="submit" class="search-button">
-            <i class="fas fa-search"></i>
-        </button>
+<div class="container-fluid" layout:fragment="content">
+    <div class="button-container">
+        <!--TÌM KIẾM HÓA ĐƠN-->
+        <div>
+            <input type="text" class="timKiem" placeholder="Tìm kiếm đơn hàng..." aria-label="Search"
+                   aria-describedby="basic-addon2">
+            <button type="submit" class="search-button">
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
 
+        <!--TẠO HÓA ĐƠN-->
         <form id="form-tao-moi" th:action="@{/TaoHoaDon}" method="post">
             <button type="submit" class="create-invoice-button">
-                Tạo hóa đơn
+                <i class="fas fa-plus"></i> Tạo hóa đơn
             </button>
         </form>
-
+    </div>
+    <div>
         <table class="table">
             <thead>
-                <tr>
-                    <th>STT</th>
-                    <th>Mã đơn</th>
-                    <th>Số sản phẩm</th>
-                    <th>Tổng số tiền</th>
-                    <th>Ngày tạo</th>
-                    <th>Trạng thái</th>
-                    <th>Thao tác</th>
-                </tr>
+            <tr>
+                <th>STT</th>
+                <th>Mã đơn</th>
+                <th>Số sản phẩm</th>
+                <th>Tổng số tiền</th>
+                <th>Ngày tạo</th>
+                <th>Trạng thái</th>
+                <th>Thao tác</th>
+            </tr>
             </thead>
 
             <tbody>
-                <tr th:each="hoaDonTaiQuay, stt: ${danhSachBanHang}">
-                    <td th:text="${stt.count}"></td>
-                    <td th:text="${hoaDonTaiQuay.maDon}"></td>
-                    <td th:text="${hoaDonTaiQuay.hoaDonChiTiets.size()}"></td>
-                    <!--            <td th:text="${hoaDonLoai1.tongTienHoaDon}"></td>-->
-                    <td th:text="${#numbers.formatDecimal(hoaDonTaiQuay.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
-            <td th:text="${#dates.format(hoaDonTaiQuay.ngayTao, 'dd/MM/yyyy')}"></td>
-            <!-- <td th:text="${hoaDonTaiQuay.trangThai.name}"></td> -->
-            <td>
-                <div class="btn-group">
-                    <a th:href="@{'/banHang/' + ${hoaDonTaiQuay.id}}"
-                       class="btn btn-warning btn-sm"
-                       type="submit">
-                        <i class="fas fa-info-circle"></i>
-                    </a>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+            <tr th:each="hoaDonTaiQuay, stt: ${danhSachBanHang}">
+                <td th:text="${(page - 1) * size + stt.count}"></td>
+                <td th:text="${hoaDonTaiQuay.maDon}"></td>
+                <td th:text="${hoaDonTaiQuay.hoaDonChiTiets.size()}"></td>
+                <td th:text="${#numbers.formatDecimal(hoaDonTaiQuay.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
+                <td th:text="${#dates.format(hoaDonTaiQuay.ngayTao, 'dd/MM/yyyy')}"></td>
+                <td th:text="${hoaDonTaiQuay.trangThai.name}"></td>
+                <td>
+                    <div class="btn-group">
+                        <a th:href="@{'/banHang/' + ${hoaDonTaiQuay.id}}"
+                           class="btn btn-warning btn-sm"
+                           type="submit">
+                            <i class="fas fa-info-circle"></i>
+                        </a>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <div th:if="${!#lists.isEmpty(danhSachBanHang)}">
+            <ul class="pagination">
+                <li th:each="pageNumber : ${#numbers.sequence(1, pageDanhSachBanHang)}">
+                    <a th:href="@{/admin/BanHangTaiQuay(page=${pageNumber})}" th:text="${pageNumber}"
+                       th:class="${pageNumber == page ? 'active-page' : ''}"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </div>
 
 <script th:src="@{/admin/js/banHang/banHangTaiQuay/danhSach.js}"></script>
