--- a/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTChoXacNhan.html
+++ b/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTChoXacNhan.html
@@ -9,7 +9,7 @@
     <script th:src="@{/admin/js/hoadon/ChiTietHoaDon/CTChoXacNhan.js}"></script>
 </head>
 <body>
-<div class="container" layout:fragment="content">
+<div class="container-fluid" layout:fragment="content">
     <h1>CHI TIẾT HÓA ĐƠN</h1>
 
     <div th:object="${hoaDon}">
