--- a/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTDaHuy.html
+++ b/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTDaHuy.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div class="container" layout:fragment="content">
+<div class="container-fluid" layout:fragment="content">
     <h1>CHI TIẾT HÓA ĐƠN</h1>
 
     <div th:object="${hoaDon}">
