--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoGiaoHang.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoGiaoHang.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div class="container" layout:fragment="content">
+<div class="container-fluid" layout:fragment="content">
     <div class="tab-buttons">
         <button class="tab-button" onclick="redirectToTatCaDon()">Tất cả đơn</button>
         <button class="tab-button" onclick="redirectToChoxacNhan()">Chờ xác nhận</button>
@@ -76,7 +76,7 @@
         </thead>
         <tbody>
         <tr th:each="hoaDon, stt : ${ChoGiaoHang}">
-            <td th:text="${stt.count}"></td>
+            <td th:text="${(page - 1) * size + stt.count}"></td>
             <th scope="row" th:text="${hoaDon.maDon}"></th>
             <td th:text="${hoaDon.khachHang.hoTen}"></td>
             <td th:text="${hoaDon.sdtNguoiNhan}"></td>
@@ -129,7 +129,8 @@
     <div th:if="${!#lists.isEmpty(ChoGiaoHang)}">
         <ul class="pagination">
             <li th:each="pageNumber : ${#numbers.sequence(1, pageChoGiaoHang)}">
-                <a th:href="@{/admin/DonHang/ChoGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
+                <a th:href="@{/admin/DonHang/ChoGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"
+                   th:class="${pageNumber == page ? 'active-page' : ''}"></a>
             </li>
         </ul>
     </div>
